Fix spacing problem in related items
SRFCMSAL-459

--- a/source/_patterns/20-molecules/medium/medium.scss
+++ b/source/_patterns/20-molecules/medium/medium.scss
@@ -69,6 +69,7 @@
 .medium--related-items {
   background-color: transparent;
   margin: 0;
+  padding: 16px 0;
 
   &:hover {
     background-color: $color-link-bg-hover;
