--- a/source/_patterns/20-molecules/related-items-list/related-items-list.scss
+++ b/source/_patterns/20-molecules/related-items-list/related-items-list.scss
@@ -56,8 +56,6 @@
 }
 
 .related-items-list__media {
-  padding: 16px 0;
-
   &:hover {
     background-color: $color-link-bg-hover;
 
